# global-risk-observatory

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  Makefile  pyproject.toml
backend/prompts/: brief.md  cluster.md  ingest.md  ingest_image.md
backend/scripts/: download_geonames.py
backend/src/risk_observatory/: __init__.py  cli.py  config.py  models.py  ollama_client.py  schemas.py  scripts_runtime.py
backend/src/risk_observatory/api/: app.py  events.py  routes_brief.py  routes_events.py  routes_images.py  routes_meta.py
backend/src/risk_observatory/geocoding/: gazetteer.py
backend/src/risk_observatory/ingestion/: extractor.py  image_cache.py  loop.py  tools.py
backend/src/risk_observatory/reasoning/: briefer.py  clusterer.py  loop.py
backend/src/risk_observatory/sources/: eonet.py  gdelt.py  rss.py  usgs.py
backend/src/risk_observatory/store/: connection.py  repository.py  schema.sql
frontend/: next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/globe/: Atmosphere.tsx  CameraRig.tsx  EarthMesh.tsx  EventArcs.tsx  EventMarkers.tsx  GlobeCanvas.tsx  Stars.tsx  shaders.ts
frontend/src/components/ui/: BriefCard.tsx  EventDetail.tsx  EventFeed.tsx  ModelStatusChip.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/hooks/: useBriefStream.ts  useEventsStream.ts
frontend/src/lib/: api.ts  morph.ts  projection.ts  sse.ts  types.ts
frontend/src/store/: useObservatoryStore.ts
scenarios/: gdelt_fixture.json
