[project]
name = "risk-observatory"
version = "0.1.0"
description = "Live world-risk Earth viz powered by Gemma 4 E4B + 26B A4B"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "ollama>=0.6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "feedparser>=6.0",
    "rapidfuzz>=3.10",
    "python-dateutil>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/risk_observatory"]

[tool.ruff]
line-length = 100
target-version = "py312"
